# server

./: .rustc_info.json  Cargo.toml  README.md
.github/workflows/: rust.yml
__tests__/: user.py  vehicle.py
html/: index.html
logger/: Cargo.toml  README.md
logger/src/: lib.rs
release/: server.d
release/.fingerprint/actix-49d2324a6a457507/: lib-actix  lib-actix.json
release/.fingerprint/actix-codec-4790b8fd2af2394d/: lib-actix_codec  lib-actix_codec.json
release/.fingerprint/actix-http-b9355a0b032e58f5/: lib-actix_http  lib-actix_http.json
release/.fingerprint/actix-macros-4be743bd3f5a05b3/: lib-actix-macros  lib-actix-macros.json
release/.fingerprint/actix-router-68134ef6f742f87c/: lib-actix_router  lib-actix_router.json
release/.fingerprint/actix-router-a15fc439eae1fd44/: lib-actix_router  lib-actix_router.json
release/.fingerprint/actix-rt-4fa58f988a4916f5/: lib-actix_rt  lib-actix_rt.json
release/.fingerprint/actix-server-3b5e3fdf9a4b7cd3/: lib-actix_server  lib-actix_server.json
release/.fingerprint/actix-service-d57def9785516f25/: lib-actix_service  lib-actix_service.json
release/.fingerprint/actix-utils-aac1b9f664616bf2/: lib-actix_utils  lib-actix_utils.json
release/.fingerprint/actix-web-761285646b2a9de8/: lib-actix_web  lib-actix_web.json
release/.fingerprint/actix-web-actors-a0c69e39ecbd9c3f/: lib-actix_web_actors  (+1 more)
sockets/: Cargo.toml
sockets/src/: lib.rs  messages.rs  ws.rs
src/: main.rs  manager.rs
src/landing/: index.html
src/manager/: users.rs  vehicles.rs
types/: Cargo.toml
types/src/: lib.rs
(+545 files in other folders)
