[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
mongodb="2.3.0"
serde_json="1.0.85"
sysinfo="0.3.15"
futures="0.3"
serde = { version = "1.0", features = ["derive"] }