[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types={ path = "./types" }
sockets={ path = "./sockets" }
logger={ path = "./logger" }
actix = "0.13.0"
actix-web="4"
actix-web-actors="4.1.0"
mongodb="2.3.0"
serde_json="1.0.85"
sysinfo="0.3.15"
futures="0.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4", "serde"] }