[package]
name = "sockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web="4"
actix-web-actors="4.1.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
uuid = "0.1"
mongodb="2.3.0"
serde_json="1.0.85"
serde = { version = "1.0", features = ["derive"] }
types = { path = "../types" }
logger = { path = "../logger" }